103-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployman
  labels:
    app: nginx
spec:
  replicas: 9 # tells deployment to run 2 pods matching the template
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 806
