109-Mosquitto_without_volumes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto-deplmnt
  labels:
    app: mosquitto
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
      - name: mosquitto
        image: eclipse-mosquitto:1.6.2
        ports:
        - containerPort: 1883
